// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UID test UID 1`] = `
<div>
  <span>
    ruid-1
  </span>
  <span>
    ruid-2
     
    ruid-2-uid1
  </span>
</div>
`;

exports[`UID test UID 2`] = `
<div>
  <span>
    key-ruid-3
  </span>
  <span>
    key-ruid-4
     
    key-ruid-4-uid2
  </span>
</div>
`;

exports[`UID test UIDConsumer 1`] = `
Array [
  <span>
    ruid-1
  </span>,
  <span>
    ruid-2
     
    ruid-2-uid1
  </span>,
  <span>
    ruid-5
  </span>,
]
`;

exports[`UID test UIDConsumer 2`] = `
Array [
  <span>
    ruid-1
  </span>,
  <span>
    ruid-1
     
    ruid-1-uid1
  </span>,
  <span>
    ruid-6
  </span>,
]
`;

exports[`UID test UIDFork 1`] = `
Array [
  <span>
    ruid-1-1
  </span>,
  <span>
    ruid-1-2
  </span>,
  <span>
    ruid-2-1
  </span>,
  <span>
    ruid-2-2
  </span>,
  <span>
    ruid-3-1
  </span>,
  <span>
    ruid-4-1
  </span>,
]
`;

exports[`UID test UIDFork uid 1`] = `
Array [
  <span>
    ruid-1-1-uid1
  </span>,
  <span>
    ruid-1-2-uid2
  </span>,
  <span>
    ruid-1-3-uid1
  </span>,
  <span>
    ruid-2-1-uid1
  </span>,
  <span>
    ruid-2-2-uid2
  </span>,
  <span>
    ruid-2-3-uid1
  </span>,
]
`;
